<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityKondisi" >

    <EditText
        android:id="@+id/editNilaiUas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nilai_uas" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editNilaiUts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editNilaiUas"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/nilai_uts" />

    <EditText
        android:id="@+id/editNilaiTugas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editNilaiUts"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/nilai_tugas" />

    <Button
        android:id="@+id/btnCheck"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/btn_check" />

    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCheck"
        android:layout_below="@+id/btnCheck"
        android:layout_marginTop="18dp"
        android:text="@string/tv_hasil" />

</RelativeLayout>